basic implementation of the selected property

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>x-slider demo</title>
+
+  <style>
+    x-slider {
+
+    }
+
+    .slide {
+      background: white;
+      border: 1px solid #ccc;
+
+      height: 200px;
+    }
+  </style>
 </head>
 <body>
   <x-slider>
-    <p>Slide 1</p>
-    <p>Slide 2</p>
-    <p>Slide 3</p>
+    <article class="slide">Slide 1</article>
+    <article class="slide">Slide 2</article>
+    <article class="slide">Slide 3</article>
+    <article class="slide">Slide 4</article>
   </x-slider>
 
   <script src="../src/x-slider.js" async defer></script>
