Added initial slide attribute

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <x-slider>
+  <x-slider initial-slide="1">
     <article class="slide">Slide 1</article>
     <article class="slide">Slide 2</article>
     <article class="slide">Slide 3</article>
