--- a/test/x-slider.html
+++ b/test/x-slider.html
@@ -14,6 +14,12 @@
       test('is defined', function() {
         assert.equal(document.getElementById('slider').constructor.name, 'XSlider');
       });
+
+      // TODO: initial-selection (correct number, out of bounds number, string, epmty)
+      // TODO: selected (correct number, out of bounds number, string, empty)
+      // TODO: hidden
+      // TODO: pagination (check that bullets are always updated with slides, that the selected bullet point always reflects the currently selected slide)
+
     });
   </script>
 </body>
