--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <x-slider selected="2">
+  <x-slider selected="2" loop>
     <article class="slide">Slide 1</article>
     <article class="slide">Slide 2</article>
     <article class="slide">Slide 3</article>
