basic setup for e2e tests

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,6 +39,8 @@
       background: deepskyblue;
     }
   </style>
+
+  <script src="../src/x-slider.js"></script>
 </head>
 <body>
   <x-slider selected="2" loop>
@@ -47,7 +49,5 @@
     <article class="slide">Slide 3</article>
     <article class="slide">Slide 4</article>
   </x-slider>
-
-  <script src="../src/x-slider.js" async defer></script>
 </body>
 </html>
