--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
     }
   </style>
 
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="./webcomponents-loader.js"></script>
 </head>
 <body>
   <x-slider
