feat(drag): refining deceleration

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,6 +40,10 @@
     .slide:nth-child(4n) {
       background: deepskyblue;
     }
+
+    .slide:nth-child(5n) {
+      background: rebeccapurple;
+    }
   </style>
 
   <script src="./webcomponents-loader.js"></script>
@@ -54,6 +58,7 @@
     <article class="slide">Slide 2</article>
     <article class="slide">Slide 3</article>
     <article class="slide">Slide 4</article>
+    <article class="slide">Slide 5</article>
   </x-slider>
 
   <script>
