--- a/demo/index.html
+++ b/demo/index.html
@@ -53,12 +53,17 @@
       selected="1"
       navigation
       pagination
-      slides-per-view="2">
+      slides-per-view="4">
     <article class="slide">Slide 1</article>
     <article class="slide">Slide 2</article>
     <article class="slide">Slide 3</article>
     <article class="slide">Slide 4</article>
     <article class="slide">Slide 5</article>
+    <article class="slide">Slide 6</article>
+    <article class="slide">Slide 7</article>
+    <article class="slide">Slide 8</article>
+    <article class="slide">Slide 9</article>
+    <article class="slide">Slide 10</article>
   </x-slider>
 
   <script>
