chore(build): splitting CSS from JS, compiling with webpack to dist build

--- a/demo/index.html
+++ b/demo/index.html
@@ -69,7 +69,7 @@
   <script>
     window.addEventListener('WebComponentsReady', function() {
       const script = document.createElement('script');
-      script.src = '../src/x-slider.js';
+      script.src = '../dist/x-slider.min.js';
 
       document.head.appendChild(script);
     });
