chore(demo): choose whether to use dev or prod  version of the library in the demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -67,9 +67,22 @@
   </x-slider>
 
   <script>
+    function getParameterByName(name) {
+      var url = window.location.href;
+      name = name.replace(/[\[\]]/g, "\\$&");
+      var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+          results = regex.exec(url);
+      if (!results) return null;
+      if (!results[2]) return '';
+      return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+
     window.addEventListener('WebComponentsReady', function() {
-      const script = document.createElement('script');
-      script.src = '../dist/x-slider.min.js';
+      var script = document.createElement('script');
+
+      var isDev = getParameterByName('dev') === 'true';
+      script.src = isDev ? '../dist/x-slider.js' :
+          '../dist/x-slider.min.js';
 
       document.head.appendChild(script);
     });
