feat(drag): enable/disable drag via attribute/property

--- a/demo/index.html
+++ b/demo/index.html
@@ -53,6 +53,7 @@
       selected="1"
       navigation
       pagination
+      drag
       slides-per-view="4">
     <article class="slide">Slide 1</article>
     <article class="slide">Slide 2</article>
