--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,7 @@
       navigation
       pagination
       drag
+      loop
       slides-per-view="4">
     <article class="slide">Slide 1</article>
     <article class="slide">Slide 2</article>
