chore(demo): slides bgs

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,24 +25,24 @@
       --x-slider-gap: 1rem;
     }
 
-    .slide:nth-child(n) {
-      background: coral;
-    }
-
-    .slide:nth-child(2n) {
-      background: lightgreen;
-    }
-
-    .slide:nth-child(3n) {
-      background: slategray;
-    }
-
-    .slide:nth-child(4n) {
-      background: deepskyblue;
-    }
-
     .slide:nth-child(5n) {
-      background: rebeccapurple;
+      background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    }
+
+    .slide:nth-child(5n + 1) {
+      background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    }
+
+    .slide:nth-child(5n + 2) {
+      background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+    }
+
+    .slide:nth-child(5n + 3) {
+      background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    }
+
+    .slide:nth-child(5n + 4) {
+      background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     }
   </style>
 
