--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,19 @@
 
   <style>
     x-slider {
-      padding: 0 80px;
+      margin: 0 auto;
+
+      --x-slider-gap: 1rem;
+      --x-slider-slide-min-height: 300px;
+      --x-slider-pagination-size: 10px;
+    }
+
+    x-slider[navigation] {
+      /*
+       * Leverage padding and margin to decide how much horizontal space
+       * around the navigation arrows.
+       */
+       padding: 0 60px;
     }
 
     .slide {
@@ -16,13 +28,13 @@
       align-items: center;
       justify-content: center;
 
-      background: white;
+      color: rgba(255, 255, 255, .9);
 
-      height: 200px;
+      font-family: sans-serif;
+      font-size: 4rem;
+      font-weight: 300;
 
       text-transform: uppercase;
-
-      --x-slider-gap: 1rem;
     }
 
     .slide:nth-child(5n) {
@@ -30,14 +42,23 @@
     }
 
     .slide:nth-child(5n + 1) {
+      align-self: flex-end;
+      height: 220px;
+
       background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
     }
 
     .slide:nth-child(5n + 2) {
+      align-self: center;
+      height: 220px;
+
       background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
     }
 
     .slide:nth-child(5n + 3) {
+      align-self: flex-start;
+      height: 220px;
+
       background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
     }
 
@@ -56,17 +77,19 @@
       drag
       loop
       slides-per-view="4">
-    <article class="slide">Slide 1</article>
-    <article class="slide">Slide 2</article>
-    <article class="slide">Slide 3</article>
-    <article class="slide">Slide 4</article>
-    <article class="slide">Slide 5</article>
-    <article class="slide">Slide 6</article>
-    <article class="slide">Slide 7</article>
-    <article class="slide">Slide 8</article>
-    <article class="slide">Slide 9</article>
-    <article class="slide">Slide 10</article>
+    <article class="slide">1</article>
+    <article class="slide">2</article>
+    <article class="slide">3</article>
+    <article class="slide">4</article>
+    <article class="slide">5</article>
+    <article class="slide">6</article>
+    <article class="slide">7</article>
+    <article class="slide">8</article>
+    <article class="slide">9</article>
+    <article class="slide">10</article>
   </x-slider>
+
+  <p>Currently selected slide: <span id="selected"></span></p>
 
   <script>
     function getParameterByName(name) {
