GH-3 feat(a11y): moving nav buttons in the light dom so that they can be discovered better

--- a/src/x-slider.html
+++ b/src/x-slider.html
@@ -4,6 +4,8 @@
   </div>
 </div>
 
-<div id="navigation"></div>
+<div id="navigation">
+  <slot id="navigationSlot" name="navigationSlot"></slot>
+</div>
 
 <ul id="pagination"></ul>
