GH-3 feaT9a11y): moving pagination indicators to light DOM, simplyfying CSS

--- a/src/x-slider.html
+++ b/src/x-slider.html
@@ -8,4 +8,6 @@
   <slot id="navigationSlot" name="navigationSlot"></slot>
 </div>
 
-<ul id="pagination"></ul>
+<div id="pagination">
+  <slot id="paginationSlot" name="paginationSlot"></slot>
+</div>
