GH-3 fix(a11y): apply focus-ring mods only if the focus-ring polyfill is executed in the page

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
   <title>x-slider demo</title>
 
   <style>
-    :focus:not(.focus-ring) {
+    .js-focus-ring :focus:not(.focus-ring) {
       outline: 0;
     }
 
