GH-3 feat(a11y): updating focus-ring to focus-visible polyfill

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
   <title>x-slider demo</title>
 
   <style>
-    .js-focus-ring :focus:not(.focus-ring) {
+    .js-focus-visible :focus:not(.focus-visible) {
       outline: 0;
     }
 
@@ -74,7 +74,7 @@
 
   <script src="./webcomponents-loader.js"></script>
   <script src="./inert.min.js"></script>
-  <script src="./focus-ring.js"></script>
+  <script src="./focus-visible.js"></script>
 </head>
 <body>
   <h1 id="title">X-Slider demo</h1>
