GH-3 feat(aria-live): adding aria-live region

--- a/src/x-slider.html
+++ b/src/x-slider.html
@@ -11,3 +11,5 @@
 <div id="pagination">
   <slot id="paginationSlot" name="paginationSlot"></slot>
 </div>
+
+<slot id="ariaSlot" name="ariaSlot"></slot>
