--- a/demo/index.html
+++ b/demo/index.html
@@ -72,9 +72,9 @@
     }
   </style>
 
-  <script src="./webcomponents-loader.js"></script>
-  <script src="./inert.min.js"></script>
-  <script src="./focus-visible.js"></script>
+  <script src="js/webcomponents-loader.js"></script>
+  <script src="js/inert.min.js"></script>
+  <script src="js/focus-visible.js"></script>
 </head>
 <body>
   <h1 id="title">X-Slider demo</h1>
