GH-10 refactor(demo): moving external JS into third-party folder

--- a/demo/base.html
+++ b/demo/base.html
@@ -72,9 +72,9 @@
     }
   </style>
 
-  <script src="js/webcomponents-loader.js"></script>
-  <script src="js/inert.min.js"></script>
-  <script src="js/focus-visible.js"></script>
+  <script src="js/third-party/webcomponents-loader.js"></script>
+  <script src="js/third-party/inert.min.js"></script>
+  <script src="js/third-party/focus-visible.js"></script>
 </head>
 <body>
   <h1 id="title">X-Slider demo</h1>
