GH-10 refactor(demo): adding list of demos

--- a/demo/base.html
+++ b/demo/base.html
@@ -77,7 +77,7 @@
   <script src="js/third-party/focus-visible.js"></script>
 </head>
 <body>
-  <h1 id="title">X-Slider demo</h1>
+  <h1 id="title">Basic usage</h1>
   <x-slider
       selected="1"
       navigation
