--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>x-slider demos</title>
+  <style>
+    /* System Fonts as used by Medium and WordPress */
+    body {
+      font-family: monospace;
+      line-height: 1.5;
+      font-size: 1.25rem;
+    }
+
+    a {
+      color: inherit;
+    }
+
+    li + li {
+      margin-top: 1em;
+    }
+  </style>
 </head>
 <body>
-  <h1>List of demos</h1>
+  <h1><code>x-slider</code> demos</h1>
   <ul>
     <li><a href="base.html">Basic usage</a></li>
+    <li><a href="#">Layout options (slides with different heights, setting the height of the carousel...) <i>[TODO]</i></a></li>
+    <li><a href="#">Navigation (previous / next) <i>[TODO]</i></a></li>
+    <li><a href="#">Pagination (dots) <i>[TODO]</i></a></li>
+    <li><a href="#">Custom pagination (previous / next) <i>[TODO]</i></a></li>
+    <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
+    <li><a href="#">Infinite loop <i>[TODO]</i></a></li>
+    <li><a href="#">Touch support <i>[TODO]</i></a></li>
+    <li><a href="#">Multiple slides per view <i>[TODO]</i></a></li>
+    <li><a href="#">Disable auto focus <i>[TODO]</i></a></li>
+    <li><a href="#">Reduced motion <i>[TODO]</i></a></li>
+    <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
+    <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
+    <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
+    <li><a href="#">Complete example <i>[TODO]</i></a></li>
   </ul>
 </body>
 </html>
