GH-10 feat(demo): added draft of complete example

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,13 @@
 
     a {
       color: inherit;
+      font-weight: bold;
+    }
+
+    a[href="#"] {
+      text-decoration: line-through;
+      font-weight: normal;
+      opacity: .6;
     }
 
     li + li {
@@ -39,7 +46,7 @@
     <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
     <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
-    <li><a href="#">Complete example <i>[TODO]</i></a></li>
+    <li><a href="complete.html">Complete example <i>[TODO]</i></a></li>
   </ul>
 </body>
 </html>
