--- a/demo/base.html
+++ b/demo/base.html
@@ -7,7 +7,7 @@
   <title>x-slider demo - base</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
-  <link rel="stylesheet" href="css/demo-styles.css">
+  <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
   <h1 id="title">Basic usage</h1>
@@ -38,7 +38,7 @@
   <script defer src="js/third-party/inert.min.js"></script>
   <script defer src="js/third-party/focus-visible.js"></script>
   <script defer src="js/third-party/prism.js" data-manual></script>
-  <script defer src="js/x-slider-loader.js"></script>
+  <script defer src="js/demo.js"></script>
   <script defer src="js/third-party/webcomponents-loader.js"></script>
 </body>
 </html>
