--- a/demo/complete.html
+++ b/demo/complete.html
@@ -7,7 +7,7 @@
   <title>x-slider demo - complete</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
-  <link rel="stylesheet" href="css/demo-styles.css">
+  <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
   <h1 id="title">Complete usage</h1>
@@ -16,19 +16,16 @@
   <template id="demoTemplate">
     <style>
       x-slider {
-        margin: 0 auto;
-
-        --x-slider-gap: 1rem;
-        --x-slider-slide-min-height: 300px;
-        --x-slider-pagination-size: 10px;
-      }
-
-      x-slider[navigation] {
         /*
         * Leverage padding and margin to decide how much horizontal space
         * around the navigation arrows.
         */
         padding: 0 60px;
+        margin: 0 auto;
+
+        --x-slider-gap: 1rem;
+        --x-slider-slide-min-height: 300px;
+        --x-slider-pagination-size: 10px;
       }
 
       .slide {
@@ -144,7 +141,7 @@
   <script defer src="js/third-party/inert.min.js"></script>
   <script defer src="js/third-party/focus-visible.js"></script>
   <script defer src="js/third-party/prism.js" data-manual></script>
-  <script defer src="js/x-slider-loader.js"></script>
+  <script defer src="js/demo.js"></script>
   <script defer src="js/third-party/webcomponents-loader.js"></script>
 </body>
 </html>
