GH-10 feat(demo): added navigation and pagination demos

--- a/demo/index.html
+++ b/demo/index.html
@@ -34,8 +34,8 @@
   <ul>
     <li><a href="base.html">Basic usage</a></li>
     <li><a href="#">Layout options (slides with different heights, setting the height of the carousel...) <i>[TODO]</i></a></li>
-    <li><a href="#">Navigation (previous / next) <i>[TODO]</i></a></li>
-    <li><a href="#">Pagination (dots) <i>[TODO]</i></a></li>
+    <li><a href="navigation.html">Navigation (previous / next)</a></li>
+    <li><a href="pagination.html">Pagination (dots)</a></li>
     <li><a href="#">Custom pagination (previous / next) <i>[TODO]</i></a></li>
     <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
     <li><a href="#">Infinite loop <i>[TODO]</i></a></li>
@@ -46,7 +46,7 @@
     <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
     <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
-    <li><a href="complete.html">Complete example <i>[TODO]</i></a></li>
+    <li><a href="#">Complete example <i>[TODO]</i></a></li>
   </ul>
 </body>
 </html>
