GH-10 fix(demo): fixed link back to all demos

--- a/demo/complete.html
+++ b/demo/complete.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1 id="title">Complete usage</h1>
-  <a id="backToIndex" href="/demo/">See all demos</a>
+  <a id="backToIndex" href="../demo/">See all demos</a>
 
   <template id="demoTemplate">
     <style>
