feat(drag): drag enabled by default, can be disabled via disableDrag property/attribute

--- a/demo/base.html
+++ b/demo/base.html
@@ -39,7 +39,7 @@
       via by dragging them, or also programmatically by calling next(),
       previous(), or setting the `selected` property.
     -->
-    <x-slider drag>
+    <x-slider>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
