GH-10 refactor(demo): updated basic demo comment

--- a/demo/base.html
+++ b/demo/base.html
@@ -35,9 +35,9 @@
 
     <!--
       The basic version of x-slider doesn't show any UI that allows the
-      user to navigate through its slides. The slides can still be navigated
-      via by dragging them, or also programmatically by calling next(),
-      previous(), or setting the `selected` property.
+      user to navigate through its slides. The slides can still be dragged,
+      or also navigated by programmatically calling next(), previous(), or
+      by setting the `selected` property.
     -->
     <x-slider>
       <article class="slide">Slide 1</article>
