GH-10 refactor(demo): fixed title and links to demo list

--- a/demo/pagination.html
+++ b/demo/pagination.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>x-slider demo - base</title>
+  <title>Pagination - x-slider demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
-  <h1 id="title">Basic usage</h1>
-  <a id="backToIndex" href="/demo/">See all demos</a>
+  <h1 id="title">Pagination (dots)</h1>
+  <a id="backToIndex" href="index.html">See all demos</a>
 
   <template id="demoTemplate">
     <style>
