--- a/demo/complete.html
+++ b/demo/complete.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>x-slider demo - complete</title>
+  <title>Complete - x-slider demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
   <h1 id="title">Complete usage</h1>
-  <a id="backToIndex" href="../demo/">See all demos</a>
+  <a id="backToIndex" href="index.html">See all demos</a>
 
   <template id="demoTemplate">
     <style>
