GH-10 refactor(demo): tweking bg colors

--- a/demo/base.html
+++ b/demo/base.html
@@ -24,7 +24,7 @@
         align-items: center;
         justify-content: center;
 
-        background: linear-gradient(to bottom right, #0ecd91, #7fffd4);
+        background: linear-gradient(to bottom right, #f0f0f0, #c0c0c0);
         box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, .05);
 
         color: white;
