--- a/demo/pagination.html
+++ b/demo/pagination.html
@@ -24,7 +24,7 @@
         align-items: center;
         justify-content: center;
 
-        background: linear-gradient(to bottom right, #cda40e, #7c6309);
+        background: linear-gradient(to bottom right, #ffc800, #cc9f00);
         box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, .05);
 
         color: white;
