--- a/demo/index.html
+++ b/demo/index.html
@@ -38,8 +38,8 @@
     <li><a href="pagination.html">Pagination (dots)</a></li>
     <li><a href="#">Custom pagination (previous / next) <i>[TODO]</i></a></li>
     <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
-    <li><a href="#">Infinite loop <i>[TODO]</i></a></li>
-    <li><a href="#">Touch support <i>[TODO]</i></a></li>
+    <li><a href="loop.html">Infinite loop</a></li>
+    <li><a href="disable-drag.html">Disable pointer events</a></li>
     <li><a href="#">Multiple slides per view <i>[TODO]</i></a></li>
     <li><a href="#">Disable auto focus <i>[TODO]</i></a></li>
     <li><a href="#">Reduced motion <i>[TODO]</i></a></li>
