--- a/demo/disable-drag.html
+++ b/demo/disable-drag.html
@@ -25,7 +25,7 @@
         align-items: center;
         justify-content: center;
 
-        background: linear-gradient(to bottom right, #0ecd91, #7fffd4);
+        background: linear-gradient(to bottom right, #7fffd4, #0ecd91);
         box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, .05);
 
         color: white;
