--- a/demo/navigation.html
+++ b/demo/navigation.html
@@ -25,7 +25,7 @@
         align-items: center;
         justify-content: center;
 
-        background: linear-gradient(to bottom right, #0e61cd, #5193e9);
+        background: linear-gradient(to bottom right, #5193e9, #0e61cd);
         box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, .05);
 
         color: white;
