GH-10 feat(demo): added slides-per-view demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
     <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
     <li><a href="loop.html">Infinite loop</a></li>
     <li><a href="disable-drag.html">Disable pointer events</a></li>
-    <li><a href="#">Multiple slides per view <i>[TODO]</i></a></li>
+    <li><a href="slides-per-view.html">Multiple slides per view</a></li>
     <li><a href="#">Disable auto focus <i>[TODO]</i></a></li>
     <li><a href="#">Reduced motion <i>[TODO]</i></a></li>
     <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
