GH-10 feat(demo): reduced-motion and auto-focus demos

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,8 +41,8 @@
     <li><a href="loop.html">Infinite loop</a></li>
     <li><a href="disable-drag.html">Disable pointer events</a></li>
     <li><a href="slides-per-view.html">Multiple slides per view</a></li>
-    <li><a href="#">Disable auto focus <i>[TODO]</i></a></li>
-    <li><a href="#">Reduced motion <i>[TODO]</i></a></li>
+    <li><a href="auto-focus.html">Auto focus</a></li>
+    <li><a href="reduced-motion.html">Reduced motion</a></li>
     <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
     <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
