GH-10 refactor(demo): tweaking styles and copy

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,6 +27,11 @@
     li + li {
       margin-top: 1em;
     }
+
+    li code {
+      background-color: #eee;
+      padding: .3em .6em;
+    }
   </style>
 </head>
 <body>
