--- a/demo/reduced-motion.html
+++ b/demo/reduced-motion.html
@@ -34,7 +34,7 @@
     </style>
 
     <!--
-      The `reduced-motion` is an a11y feature and attribute disables transisions
+      The `reduced-motion` is an a11y-related attribute which disables transisions
       on the carousel (including when the user releases the pointer while dragging.)
     -->
     <x-slider reduced-motion>
