--- a/demo/slides-per-view.html
+++ b/demo/slides-per-view.html
@@ -34,15 +34,18 @@
     </style>
 
     <!--
-      `slides-per-view` enables infinite loop.
-      `loop` enables infinite loop.
+      `slides-per-view` controls how many slides are seen at the same time.
     -->
-    <x-slider loop slides-per-view="3">
+    <x-slider slides-per-view="3">
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
       <article class="slide">Slide 5</article>
+      <article class="slide">Slide 6</article>
+      <article class="slide">Slide 7</article>
+      <article class="slide">Slide 8</article>
+      <article class="slide">Slide 9</article>
     </x-slider>
   </template>
 
