--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,7 @@
     <li><a href="slides-per-view.html">Multiple slides per view</a></li>
     <li><a href="auto-focus.html">Auto focus</a></li>
     <li><a href="reduced-motion.html">Reduced motion</a></li>
-    <li><a href="#">Consum  ing the selected event <i>[TODO]</i></a></li>
+    <li><a href="events.html">Consuming the <code>x-slider-selected-changed</code> event</a></li>
     <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
     <li><a href="#">Complete example <i>[TODO]</i></a></li>
