GH-10 feat(demo): add/remove demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -49,7 +49,7 @@
     <li><a href="auto-focus.html">Auto focus</a></li>
     <li><a href="reduced-motion.html">Reduced motion</a></li>
     <li><a href="events.html">Consuming the <code>x-slider-selected-changed</code> event</a></li>
-    <li><a href="#">Adding / removing slides <i>[TODO]</i></a></li>
+    <li><a href="add-remove.html">Adding/removing slides</a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
     <li><a href="#">Complete example <i>[TODO]</i></a></li>
   </ul>
