GH-10 feat(demo): added custom navigation demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,9 +39,9 @@
   <ul>
     <li><a href="base.html">Basic usage</a></li>
     <li><a href="#">Layout options (slides with different heights, setting the height of the carousel...) <i>[TODO]</i></a></li>
-    <li><a href="navigation.html">Navigation (previous / next)</a></li>
+    <li><a href="navigation.html">Default navigation (previous/next)</a></li>
+    <li><a href="custom-navigation.html">Custom navigation (previous/next)</a></li>
     <li><a href="pagination.html">Pagination (dots)</a></li>
-    <li><a href="#">Custom pagination (previous / next) <i>[TODO]</i></a></li>
     <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
     <li><a href="loop.html">Infinite loop</a></li>
     <li><a href="disable-drag.html">Disable pointer events</a></li>
