GH-10 refactor(demo): polishing demos

--- a/demo/complete.html
+++ b/demo/complete.html
@@ -20,8 +20,8 @@
         * Leverage padding and margin to decide how much horizontal space
         * around the navigation arrows.
         */
-        padding: 0 50px;
-        margin: 0 auto;
+        padding: 0 calc(10px + var(--x-slider-navigation-button-size));
+        margin: 0 10px;
 
         --x-slider-gap: 1rem;
         --x-slider-slide-min-height: 300px;
