--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
     <li><a href="pagination.html">Pagination (dots)</a></li>
     <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
     <li><a href="loop.html">Infinite loop</a></li>
-    <li><a href="disable-drag.html">Disable pointer events</a></li>
+    <li><a href="disable-drag.html">Disable pointer events (a.k.a. drag)</a></li>
     <li><a href="slides-per-view.html">Multiple slides per view</a></li>
     <li><a href="auto-focus.html">Auto focus</a></li>
     <li><a href="reduced-motion.html">Reduced motion</a></li>
