refactor(navigation): using class instead of id for navigation buttons as they are now in the light DOM — preventing duplicate IDs

--- a/demo/custom-navigation.html
+++ b/demo/custom-navigation.html
@@ -40,8 +40,9 @@
         --x-slider-navigation-icon-mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='%23000'%3E %3Cpath fill-rule='evenodd' d='M47 2L32 32l15 30-29-30L47 2z'/%3E %3C/svg%3E");
       }
 
-      x-slider > #previous,
-      x-slider > #next {
+      /* Previous and next buttons */
+      .x-slider-previous,
+      .x-slider-next {
         border-radius: 0;
         border: 1px solid var(--x-slider-navigation-color);
 
