GH-10 feat(demo): layout

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,7 +38,6 @@
   <h1><code>x-slider</code> demos</h1>
   <ul>
     <li><a href="base.html">Basic usage</a></li>
-    <li><a href="#">Layout options (slides with different heights, setting the height of the carousel...) <i>[TODO]</i></a></li>
     <li><a href="navigation.html">Default navigation (previous/next)</a></li>
     <li><a href="custom-navigation.html">Custom navigation (previous/next)</a></li>
     <li><a href="pagination.html">Pagination (dots)</a></li>
@@ -50,6 +49,7 @@
     <li><a href="reduced-motion.html">Reduced motion</a></li>
     <li><a href="events.html">Consuming the <code>x-slider-selected-changed</code> event</a></li>
     <li><a href="add-remove.html">Adding/removing slides</a></li>
+    <li><a href="layout.html">Layout options</a></li>
     <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
     <li><a href="#">Complete example <i>[TODO]</i></a></li>
   </ul>
