--- a/demo/layout.html
+++ b/demo/layout.html
@@ -42,7 +42,7 @@
         align-items: center;
         justify-content: center;
 
-        background: linear-gradient(to bottom right, #f0f0f0, #c0c0c0);
+        background: linear-gradient(to bottom right, #c6f7cc, #6f9874);
         box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, .05);
 
         color: white;
