GH-10 feat(demo): custom pagination demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,7 +41,7 @@
     <li><a href="navigation.html">Default navigation (previous/next)</a></li>
     <li><a href="custom-navigation.html">Custom navigation (previous/next)</a></li>
     <li><a href="pagination.html">Pagination (dots)</a></li>
-    <li><a href="#">Custom pagination <i>[TODO]</i></a></li>
+    <li><a href="custom-pagination.html">Custom pagination (dots)</a></li>
     <li><a href="loop.html">Infinite loop</a></li>
     <li><a href="disable-drag.html">Disable pointer events (a.k.a. drag)</a></li>
     <li><a href="slides-per-view.html">Multiple slides per view</a></li>
