GH-10 feat(demos): added responsive demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,8 +50,7 @@
     <li><a href="events.html">Consuming the <code>x-slider-selected-changed</code> event</a></li>
     <li><a href="add-remove.html">Adding/removing slides</a></li>
     <li><a href="layout.html">Layout options</a></li>
-    <li><a href="#">Responsive styles <i>[TODO]</i></a></li>
-    <li><a href="#">Complete example <i>[TODO]</i></a></li>
+    <li><a href="responsive.html">Responsive</a></li>
   </ul>
 </body>
 </html>
