GH-10 refactor(demo): adding 100% width on the responsive demo

--- a/demo/responsive.html
+++ b/demo/responsive.html
@@ -52,6 +52,8 @@
 
       @media screen and (min-width: 768px) {
         x-slider {
+          width: 100%;
+
           /* Adding a bigger gap as from this resolution slidesPerView is > 1 */
           --x-slider-gap: 8px;
         }
