--- a/demo/complete.html
+++ b/demo/complete.html
@@ -132,8 +132,10 @@
         selectedIndicator.textContent = e.detail;
       });
 
-      customElements.whenDefined('x-slider').then(() => {
-        selectedIndicator.textContent = slider.selected;
+      window.addEventListener('WebComponentsReady', function() {
+        customElements.whenDefined('x-slider').then(() => {
+          selectedIndicator.textContent = slider.selected;
+        });
       });
     </script>
   </template>
