GH-13 fix(shadycss): wrapping the ariaSlot in a div, so that the CSS can be polyfilled successfully

--- a/src/x-slider.html
+++ b/src/x-slider.html
@@ -12,4 +12,6 @@
   <slot id="paginationSlot" name="paginationSlot"></slot>
 </div>
 
-<slot id="ariaSlot" name="ariaSlot"></slot>
+<div id="aria-live">
+  <slot id="ariaSlot" name="ariaSlot"></slot>
+</div>
