GH-13 fix(demo-es5): making the es5 demo run (still with pathces)

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,6 +51,7 @@
     <li><a href="add-remove.html">Adding/removing slides</a></li>
     <li><a href="layout.html">Layout options</a></li>
     <li><a href="responsive.html">Responsive</a></li>
+    <li><a href="es5.html">ES5</a></li>
   </ul>
 </body>
 </html>
