--- a/demo/es5.html
+++ b/demo/es5.html
@@ -55,6 +55,7 @@
   <script>if (!window.customElements) { document.write('<!--'); }</script>
   <script defer src="js/third-party/custom-elements-es5-adapter.js"></script>
   <!--! do not remove -->
+   <!--While using webcomponents-lite.js, I I noticed that the WebComponentsReady event doesn't focus enough.... -->
   <script defer src="js/third-party/webcomponents-lite.js"></script>
 </body>
 </html>
